--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile "org.springframework:spring-core:${springVersion}"
     compile "org.springframework:spring-context:${springVersion}"
 
+    compile "org.springframework:spring-aop:${springVersion}" 
+    compile "org.aspectj:aspectjweaver:1.8.13"
+
     testCompile "org.springframework:spring-test:${springVersion}"
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-core:2.19.0"
